# libjpeg-turbo-android-prefab

./: .gitmodules  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
libjpeg-turbo/: build.gradle
libjpeg-turbo/src/main/: AndroidManifest.xml
libjpeg-turbo/src/main/cpp/: CMakeLists.txt
libjpeg-turbo/src/main/cpp/include/: jconfig.h  jconfigint.h  jerror.h  jmorecfg.h  jpeglib.h  turbojpeg.h
